@@ -1,3 +1,9 @@
+TAG: nomenload-6-0-16-3
+DATE: 04/14/2021
+STAFF: lec
+CHANGES:
+WTS2-480/added Batch Rename
+
 TAG: nomenload-6-0-16-2
 DATE: 10/23/2020
 STAFF: lec
